--- a/packages/runtime/runtime-definitions/package.json
+++ b/packages/runtime/runtime-definitions/package.json
@@ -116,6 +116,13 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {}
+		"broken": {
+			"InterfaceDeclaration_IIdCompressorCore": {
+				"forwardCompat": false
+			},
+			"ClassDeclaration_IdCompressor": {
+				"forwardCompat": false
+			}
+		}
 	}
 }
