WIP - trying to move BTree to client-utils

--- a/packages/common/client-utils/package.json
+++ b/packages/common/client-utils/package.json
@@ -35,7 +35,7 @@
 	"scripts": {
 		"api": "fluid-build . --task api",
 		"api-extractor:commonjs": "api-extractor run --local",
-		"api-extractor:esnext": "api-extractor run --config ./api-extractor-esm.json",
+		"api-extractor:esnext": "api-extractor run --config ./api-extractor-esm.json --verbose --diagnostics",
 		"build": "fluid-build . --task build",
 		"build:commonjs": "fluid-build . --task commonjs",
 		"build:compile": "fluid-build . --task compile",
