--- a/docs/static/staticwebapp.config.json
+++ b/docs/static/staticwebapp.config.json
@@ -1,27 +1,12 @@
 {
-	"routes": [
-		{
-			"route": "/docs/fcdocstest",
-			"redirect": "/docs/apis",
-			"statusCode": 301
-		},
-		{
-			"route": "/docs/apis/azure-client/*",
-			"redirect": "/docs/apis",
-			"statusCode": 301
-		},
-		{
-			"route": "/docs/fcdocstest/*",
-			"redirect": "/docs/apis/*",
-			"statusCode": 301
-		},
-		{
-			"route": "/docs/apis/azure-client",
-			"redirect": "/docs/apis",
-			"statusCode": 301
-		}
-	],
-	"globalHeaders": {
-		"cache-control": "must-revalidate, max-age=3600"
-	}
+  "routes": [
+    {
+      "route": "/docs/apis",
+      "redirect": "/docs/api/v1",
+      "statusCode": 301
+    }
+  ],
+  "globalHeaders": {
+    "cache-control": "must-revalidate, max-age=3600"
+  }
 }
