Move handle serialization type/guard to CR

--- a/packages/dds/shared-object-base/package.json
+++ b/packages/dds/shared-object-base/package.json
@@ -173,6 +173,15 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {}
+		"broken": {
+			"RemovedInterfaceDeclaration_ISerializedHandle": {
+				"forwardCompat": false,
+				"backCompat": false
+			},
+			"RemovedVariableDeclaration_isSerializedHandle": {
+				"forwardCompat": false,
+				"backCompat": false
+			}
+		}
 	}
 }
