--- a/packages/dds/tree/package.json
+++ b/packages/dds/tree/package.json
@@ -11,10 +11,13 @@
 	"license": "MIT",
 	"author": "Microsoft and contributors",
 	"sideEffects": false,
-	"main": "dist/index.js",
+	"type": "module",
+	"main": "dist/index.cjs",
 	"module": "lib/index.js",
-	"types": "dist/index.d.ts",
+	"types": "dist/index.d.cts",
 	"scripts": {
+		"api-extractor:commonjs": "api-extractor run --config ./api-extractor-cjs.json",
+		"api-extractor:esnext": "api-extractor run --local --config ./api-extractor-esm.json",
 		"bench": "mocha --timeout 999999 --perfMode --parentProcess --fgrep @Benchmark --reporter @fluid-tools/benchmark/dist/MochaReporter.js",
 		"bench:profile": "mocha --v8-prof --v8-logfile=profile.log --v8-no-logfile-per-isolate --timeout 999999 --perfMode --fgrep @Benchmark --reporter @fluid-tools/benchmark/dist/MochaReporter.js && node --prof-process profile.log > profile.txt && rimraf profile.log && echo See results in profile.txt",
 		"build": "fluid-build . --task build",
@@ -46,7 +49,7 @@
 		"test:snapshots:regen": "npm run test:mocha -- --snapshot",
 		"test:stress": "cross-env FUZZ_TEST_COUNT=20 FUZZ_STRESS_RUN=true mocha --ignore \"dist/test/memory/**/*\" --recursive \"dist/test/**/*.spec.js\" -r @fluidframework/mocha-test-setup",
 		"ts2esm": "ts2esm ./tsconfig.json ./src/test/tsconfig.json",
-		"tsc": "tsc",
+		"tsc": "tsc-multi --config ./tsc-multi.cjs.json",
 		"typetests:gen": "fluid-type-test-generator",
 		"typetests:prepare": "flub typetests --dir . --reset --previous --normalize"
 	},
@@ -125,7 +128,36 @@
 		"prettier": "~3.0.3",
 		"rimraf": "^4.4.0",
 		"ts2esm": "^1.1.0",
+		"tsc-multi": "^1.1.0",
 		"typescript": "~5.1.6"
+	},
+	"fluidBuild": {
+		"tasks": {
+			"build:docs": [
+				"build:esnext"
+			],
+			"build:esnext": [
+				"^api",
+				"^build:esnext"
+			],
+			"ci:build:docs": [
+				"build:esnext"
+			],
+			"commonjs": {
+				"dependsOn": [
+					"tsc"
+				],
+				"script": false
+			},
+			"compile": {
+				"dependsOn": [
+					"build:commonjs",
+					"build:esnext",
+					"build:test"
+				],
+				"script": false
+			}
+		}
 	},
 	"typeValidation": {
 		"disabled": true,
