--- a/packages/dds/tree/package.json
+++ b/packages/dds/tree/package.json
@@ -84,7 +84,7 @@
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"@sinclair/typebox": "^0.29.4",
 		"@ungap/structured-clone": "^1.2.0",
-		"sorted-btree": "^1.8.0",
+		"sorted-btree": "npm:@tylerbu/sorted-btree-es6@^1.8.0",
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
