--- a/packages/runtime/container-runtime/package.json
+++ b/packages/runtime/container-runtime/package.json
@@ -189,7 +189,7 @@
 		"double-ended-queue": "^2.1.0-0",
 		"events": "^3.1.0",
 		"lz4js": "^0.2.0",
-		"sorted-btree": "^1.8.0",
+		"sorted-btree": "npm:@tylerbu/sorted-btree-es6@^1.8.0",
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
