Use forked sorted-btree

--- a/packages/dds/tree/package.json
+++ b/packages/dds/tree/package.json
@@ -82,8 +82,8 @@
 		"@fluidframework/shared-object-base": "workspace:~",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"@sinclair/typebox": "^0.29.4",
+		"@tylerbu/sorted-btree-es6": "^1.8.0",
 		"@ungap/structured-clone": "^1.2.0",
-		"sorted-btree": "^1.8.0",
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
