--- a/packages/utils/telemetry-utils/tsconfig.json
+++ b/packages/utils/telemetry-utils/tsconfig.json
@@ -1,12 +1,10 @@
 {
-	"extends": [
-		"../../../common/build/build-common/tsconfig.base.json",
-		"../../../common/build/build-common/tsconfig.cjs.json",
-	],
-	"include": ["src/**/*"],
+	"extends": "@fluidframework/build-common/ts-common-config.json",
 	"exclude": ["src/test/**/*"],
 	"compilerOptions": {
 		"rootDir": "./src",
 		"outDir": "./dist",
+		"composite": true,
 	},
+	"include": ["src/**/*"],
 }
