--- a/packages/dds/tree/package.json
+++ b/packages/dds/tree/package.json
@@ -12,9 +12,9 @@
 	"author": "Microsoft and contributors",
 	"sideEffects": false,
 	"type": "module",
-	"main": "dist/index.cjs",
+	"main": "dist/index.js",
 	"module": "lib/index.js",
-	"types": "dist/index.d.cts",
+	"types": "dist/index.d.ts",
 	"scripts": {
 		"api-extractor:commonjs": "api-extractor run --config ./api-extractor-cjs.json",
 		"api-extractor:esnext": "api-extractor run --local --config ./api-extractor-esm.json",
@@ -49,7 +49,7 @@
 		"test:snapshots:regen": "npm run test:mocha -- --snapshot",
 		"test:stress": "cross-env FUZZ_TEST_COUNT=20 FUZZ_STRESS_RUN=true mocha --ignore \"dist/test/memory/**/*\" --recursive \"dist/test/**/*.spec.js\" -r @fluidframework/mocha-test-setup",
 		"ts2esm": "ts2esm ./tsconfig.json ./src/test/tsconfig.json",
-		"tsc": "tsc-multi --config ./tsc-multi.cjs.json",
+		"tsc": "tsc --project ./tsconfig.cjs.json && echo {\\\"module\\\": \\\"commonjs\\\"} > dist/package.json",
 		"typetests:gen": "fluid-type-test-generator",
 		"typetests:prepare": "flub typetests --dir . --reset --previous --normalize"
 	},
@@ -128,7 +128,6 @@
 		"prettier": "~3.0.3",
 		"rimraf": "^4.4.0",
 		"ts2esm": "^1.1.0",
-		"tsc-multi": "^1.1.0",
 		"typescript": "~5.1.6"
 	},
 	"fluidBuild": {
