--- a/.github/labeler-areas.yml
+++ b/.github/labeler-areas.yml
@@ -1,5 +1,7 @@
 # This file is a map of labels to repo glob paths. See https://github.com/marketplace/actions/labeler
-# for more details.
+# for more details about the config format. The labels in this file will be added AND removed from PRs as the files
+# edited in the PR change. See https://github.com/microsoft/FluidFramework/blob/main/.github/workflows/pr-labeler.yml to
+# see how this config file is used.
 
 "area: build":
   - ".github/*"
@@ -85,7 +87,3 @@ documentation:
 # flag changes to public APIs so they can be reviewed to see if they're breaking
 "public api change":
   - "**/api-report/**"
-
-# Require changesets for server public API changes
-"changeset-required":
-  - "**/routerlicious/api-report/**"
