--- a/build-tools/packages/build-tools/package.json
+++ b/build-tools/packages/build-tools/package.json
@@ -49,6 +49,7 @@
 		"date-fns": "^2.30.0",
 		"debug": "^4.3.4",
 		"detect-indent": "^6.1.0",
+		"execa": "^5.1.1",
 		"find-up": "^5.0.0",
 		"fs-extra": "^9.1.0",
 		"glob": "^7.2.3",
