Remove deprecated "Errors" types on next-branch (#17651)
#### Description


[5467](https://dev.azure.com/fluidframework/internal/_workitems/edit/5467/)

Deprecate error types on the next branch.

---------

Co-authored-by: Joshua Smithrud <54606601+Josmithr@users.noreply.github.com>
Co-authored-by: Alex Villarreal <716334+alexvy86@users.noreply.github.com>

--- a/packages/common/container-definitions/package.json
+++ b/packages/common/container-definitions/package.json
@@ -79,6 +79,10 @@
 	},
 	"typeValidation": {
 		"broken": {
+			"RemovedEnumDeclaration_ContainerErrorType": {
+				"forwardCompat": false,
+				"backCompat": false
+			},
 			"RemovedInterfaceDeclaration_IPendingLocalState": {
 				"forwardCompat": false,
 				"backCompat": false
