--- a/packages/common/driver-definitions/package.json
+++ b/packages/common/driver-definitions/package.json
@@ -89,6 +89,11 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {}
+		"broken": {
+			"RemovedEnumDeclaration_DriverErrorType": {
+				"backCompat": false,
+				"forwardCompat": false
+			}
+		}
 	}
 }
