--- a/packages/common/container-definitions/package.json
+++ b/packages/common/container-definitions/package.json
@@ -91,6 +91,15 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {}
+		"broken": {
+			"RemovedEnumDeclaration_ContainerErrorType": {
+				"forwardCompat": false,
+				"backCompat": false
+			},
+			"RemovedInterfaceDeclaration_IPendingLocalState": {
+				"forwardCompat": false,
+				"backCompat": false
+			}
+		}
 	}
 }
