--- a/tools/pipelines/test-real-service.yml
+++ b/tools/pipelines/test-real-service.yml
@@ -123,6 +123,8 @@ stages:
   # end-to-end tests odsp
   - stage:
     displayName:  e2e - odsp
+    # disable as the lts version, 1.0.0 is no longer supported for all features on odsp, specifically "Received summaryNack: Upgrade to a newer version of the Fluid client packages to summarize."
+    condition: "false"
     dependsOn: []
     # use a variable group with exclusive lock force only one run at a time and avoid overloading the server/throttling
     variables:
