--- a/packages/tools/replay-tool/package.json
+++ b/packages/tools/replay-tool/package.json
@@ -21,6 +21,7 @@
 		"api": "fluid-build . --task api",
 		"api-extractor:commonjs": "api-extractor run --local",
 		"build": "fluid-build . --task build",
+		"build:commonjs": "tsc",
 		"build:compile": "fluid-build . --task compile",
 		"build:docs": "fluid-build . --task api",
 		"ci:build:docs": "api-extractor run",
@@ -31,8 +32,7 @@
 		"lint": "npm run prettier && npm run eslint",
 		"lint:fix": "npm run prettier:fix && npm run eslint:fix",
 		"prettier": "prettier --check . --cache --ignore-path ../../../.prettierignore",
-		"prettier:fix": "prettier --write . --cache --ignore-path ../../../.prettierignore",
-		"build:commonjs": "tsc"
+		"prettier:fix": "prettier --write . --cache --ignore-path ../../../.prettierignore"
 	},
 	"dependencies": {
 		"@fluid-experimental/sequence-deprecated": "workspace:~",
