--- a/common/lib/common-definitions/package.json
+++ b/common/lib/common-definitions/package.json
@@ -42,6 +42,8 @@
 		"lint:fix": "npm run prettier:fix && npm run eslint:fix",
 		"prettier": "prettier --check . --cache --ignore-path ../../../.prettierignore",
 		"prettier:fix": "prettier --write . --cache --ignore-path ../../../.prettierignore",
+		"tsc": "tsc",
+		"tsc:watch": "tsc --watch",
 		"typetests:gen": "fluid-type-test-generator",
 		"typetests:prepare": "flub generate typetests --prepare --dir ."
 	},
@@ -71,7 +73,7 @@
 			"release/**": "patch"
 		},
 		"tasks": {
-			"build:commonjs": [
+			"tsc": [
 				"...",
 				"typetests:gen"
 			]
