--- a/tools/pipelines/build-bundle-size-artifacts.yml
+++ b/tools/pipelines/build-bundle-size-artifacts.yml
@@ -15,9 +15,8 @@ trigger:
     - release/*
 
 extends:
-  template: /tools/pipelines/templates/1ES/build-npm-package.yml@self
+  template: templates/build-npm-package.yml
   parameters:
-    publish: false
     taskLint: false
     taskTest: [] # no tests
     taskPack: false
@@ -27,10 +26,8 @@ extends:
     packageManagerInstallCommand: 'pnpm i --frozen-lockfile'
     packageManager: pnpm
     buildDirectory: .
-    tagName: bundle-artifact
-    # This pipeline doesn't generate production artifacts but the build-npm-package template is too intertwined with
-    # that scenario, which requires that the pipeline runs in the 1ES pool.
-    poolBuild: NewLarge-linux-1ES
+    tagName: bundle-artifacts
+    poolBuild: Large
     checkoutSubmodules: true
     releaseBuildOverride: none
     publishOverride: default
